--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
       font-weight: 500;
     }
 
+    /* gallery grid */
     .why-gallery {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -363,11 +364,98 @@
       margin-top: 0.5rem;
     }
 
-    .why-gallery img {
+    /* clickable thumbnail wrapper */
+    .why-thumb {
+      position: relative;
+      border-radius: 0.4rem;
+      overflow: hidden;
+      cursor: pointer;
+      transform: translateZ(0);
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .why-thumb img {
       width: 100%;
       aspect-ratio: 4 / 3;
       object-fit: cover;
-      border-radius: 0.4rem;
+      pointer-events: none;
+    }
+
+    .why-thumb:hover,
+    .why-thumb:focus-visible {
+      transform: scale(1.06);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.45);
+      z-index: 1;
+    }
+
+    .why-thumb:focus-visible {
+      outline: 3px solid #fff;
+      outline-offset: 2px;
+    }
+
+    /* ---------- Lightbox modal for board images ---------- */
+    .image-modal {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 0, 0, 0.7);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.25s ease;
+      z-index: 999;
+    }
+
+    .image-modal.open {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .image-modal-content {
+      position: relative;
+      max-width: min(90vw, 900px);
+      max-height: min(90vh, 650px);
+      transform: scale(0.96);
+      transition: transform 0.25s ease;
+    }
+
+    .image-modal.open .image-modal-content {
+      transform: scale(1);
+    }
+
+    .image-modal-img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 0.75rem;
+      background: #000;
+    }
+
+    .image-modal-close {
+      position: absolute;
+      top: -14px;
+      right: -14px;
+      width: 34px;
+      height: 34px;
+      border-radius: 50%;
+      border: none;
+      background: #ffffff;
+      color: #000;
+      font-size: 1.2rem;
+      font-weight: 700;
+      cursor: pointer;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.15s ease, transform 0.1s ease;
+    }
+
+    .image-modal-close:hover {
+      background: #ddd;
+      transform: translateY(1px);
     }
 
     /* ---------- Footer Contact Button ---------- */
@@ -578,11 +666,19 @@
           <div class="why-card">
             <h3>Past Board Work:</h3>
             <div class="why-gallery">
-              <!-- Replace each src with your board images -->
-              <img src="https://via.placeholder.com/300x220.png?text=Board+1" alt="Board work 1">
-              <img src="https://via.placeholder.com/300x220.png?text=Board+2" alt="Board work 2">
-              <img src="https://via.placeholder.com/300x220.png?text=Board+3" alt="Board work 3">
-              <img src="https://via.placeholder.com/300x220.png?text=Board+4" alt="Board work 4">
+              <!-- Each image wrapped in .why-thumb for hover + click -->
+              <button class="why-thumb" type="button">
+                <img src="https://via.placeholder.com/300x220.png?text=Board+1" alt="Board work 1">
+              </button>
+              <button class="why-thumb" type="button">
+                <img src="https://via.placeholder.com/300x220.png?text=Board+2" alt="Board work 2">
+              </button>
+              <button class="why-thumb" type="button">
+                <img src="https://via.placeholder.com/300x220.png?text=Board+3" alt="Board work 3">
+              </button>
+              <button class="why-thumb" type="button">
+                <img src="https://via.placeholder.com/300x220.png?text=Board+4" alt="Board work 4">
+              </button>
             </div>
           </div>
         </div>
@@ -599,5 +695,60 @@
       </div>
     </footer>
   </div>
+
+  <!-- Lightbox modal markup -->
+  <div class="image-modal" id="imageModal" aria-hidden="true">
+    <div class="image-modal-content">
+      <img src="" alt="Enlarged board image" class="image-modal-img" id="imageModalImg">
+      <button class="image-modal-close" type="button" aria-label="Close image">&times;</button>
+    </div>
+  </div>
+
+  <script>
+    // Simple lightbox for the board images
+    (function () {
+      const modal = document.getElementById('imageModal');
+      const modalImg = document.getElementById('imageModalImg');
+      const closeBtn = document.querySelector('.image-modal-close');
+      const thumbs = document.querySelectorAll('.why-thumb');
+
+      function openModal(src, alt) {
+        modalImg.src = src;
+        modalImg.alt = alt || 'Board work image';
+        modal.classList.add('open');
+        modal.setAttribute('aria-hidden', 'false');
+      }
+
+      function closeModal() {
+        modal.classList.remove('open');
+        modal.setAttribute('aria-hidden', 'true');
+        modalImg.src = '';
+      }
+
+      thumbs.forEach(btn => {
+        btn.addEventListener('click', () => {
+          const img = btn.querySelector('img');
+          if (!img) return;
+          openModal(img.src, img.alt);
+        });
+      });
+
+      closeBtn.addEventListener('click', closeModal);
+
+      // Close when clicking outside the image
+      modal.addEventListener('click', (e) => {
+        if (e.target === modal) {
+          closeModal();
+        }
+      });
+
+      // Close on Escape
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' && modal.classList.contains('open')) {
+          closeModal();
+        }
+      });
+    })();
+  </script>
 </body>
 </html>
