Update background image and list item classes

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     /* ---------- WHY SECTION (bottom) ---------- */
     .why-section {
       margin-top: 2rem;
-      background-image: url("https://via.placeholder.com/1920x1080.png?text=Pixel+Background"); /* replace with your pixel bg */
+      background-image: url("/assets/Home/Background.png"); /* replace with your pixel bg */
       background-size: cover;
       background-position: center;
       padding: 3rem 0 4rem;
@@ -655,7 +655,7 @@
               <li><span class="why-check">✓</span> Fresh Thermal Paste <span class="why-arrow">›</span></li>
               <li><span class="why-check">✓</span> Upgraded HDD <span class="why-arrow">›</span></li>
               <li><span class="why-check">✓</span> NAND Dumps <span class="why-arrow">›</span></li>
-              <li class="muted"><span class="why-check">✓</span> Full Refurbishment <span class="why-arrow">›</span></li>
+              <li><span class="why-check">✓</span> Full Refurbishment <span class="why-arrow">›</span></li>
               <li><span class="why-check">✓</span> Custom LEDs <span class="why-arrow">›</span></li>
               <li><span class="why-check">✓</span> Accessories Included <span class="why-arrow">›</span></li>
               <li><span class="why-check">✓</span> Pre-loaded Software <span class="why-arrow">›</span></li>
