--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     /* ---------- WHY SECTION (bottom) ---------- */
     .why-section {
       margin-top: 2rem;
-      background-image: img("/assets/Home/Background.png");
+      background-image: url("/assets/Home/Background.png");
       background-size: cover;
       background-position: center;
       padding: 3rem 0 4rem;
