--- a/index.html
+++ b/index.html
@@ -668,16 +668,16 @@
             <div class="why-gallery">
               <!-- Each image wrapped in .why-thumb for hover + click -->
               <button class="why-thumb" type="button">
-                <img src="https://via.placeholder.com/300x220.png?text=Board+1" alt="Board work 1">
+                <img src="/assets/Home/Image_1.jpeg" alt="Board work 1">
               </button>
               <button class="why-thumb" type="button">
-                <img src="https://via.placeholder.com/300x220.png?text=Board+2" alt="Board work 2">
+                <img src="/assets/Home/Image_2.jpg" alt="Board work 2">
               </button>
               <button class="why-thumb" type="button">
-                <img src="https://via.placeholder.com/300x220.png?text=Board+3" alt="Board work 3">
+                <img src="/assets/Home/Image_3.jpeg" alt="Board work 3">
               </button>
               <button class="why-thumb" type="button">
-                <img src="https://via.placeholder.com/300x220.png?text=Board+4" alt="Board work 4">
+                <img src="/assets/Home/Image_4.jpeg" alt="Board work 4">
               </button>
             </div>
           </div>
