--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
 
     .image-modal-content {
       position: relative;
-      max-width: min(90vw, 900px);
-      max-height: min(90vh, 650px);
+      max-width: 95vw;   /* never wider than the viewport */
+      max-height: 90vh;  /* never taller than the viewport */
       transform: scale(0.96);
       transition: transform 0.25s ease;
     }
@@ -426,9 +426,11 @@
     }
 
     .image-modal-img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+      max-width: 100%;
+      max-height: 90vh;  /* hard cap on height */
+      width: auto;
+      height: auto;
+      object-fit: contain;  /* keeps aspect ratio, fits inside box */
       border-radius: 0.75rem;
       background: #000;
     }
