Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -564,8 +564,7 @@
     <header>
       <div class="container nav">
         <div class="nav-left">
-          <!-- Replace src with your logo -->
-          <img src="https://via.placeholder.com/58x58?text=Logo" alt="WareHouseX360 logo" class="logo-img">
+          <img src="/assets/logo/website_logo.png" alt="WareHouseX360 logo" class="logo-img">
           <div class="logo-text">WAREHOUSEX360</div>
         </div>
 
