--- a/send-in.html
+++ b/send-in.html
@@ -44,7 +44,7 @@
       margin: 0 auto;
     }
 
-    /* ---------- NAVBAR (copy of home) ---------- */
+    /* ---------- Header / Nav ---------- */
     header {
       border-bottom: 1px solid #ddd;
       background: #fff;
