Fixed Home screen carousel border in dark mode

--- a/home.html
+++ b/home.html
@@ -218,6 +218,10 @@
 			box-shadow: 0 4px 0 rgba(41, 41, 41, 0.4);
 		}
 
+		body.dark-mode .console-card {
+			border-color:#333; 
+		}
+
 		.nav-right .contact-btn:hover,
 		.footer-contact .contact-btn:hover {
 			transform: translateY(1px);
