Small bug fixes

--- a/contact-us.html
+++ b/contact-us.html
@@ -544,7 +544,7 @@
 
           <!-- mailto-based form (opens email client with pre-filled body) -->
           <form class="contact-form"
-                action="mailto:warehouseX360@gmail.com"
+                action="mailto:warehousex360@gmail.com"
                 method="POST"
                 enctype="text/plain">
             <div class="form-row">
