--- a/send-in.html
+++ b/send-in.html
@@ -216,6 +216,71 @@
     }
     .zoomable-board:hover { transform: scale(1.06); }
 
+    /* ---------- LIGHTBOX WITH CLOSE BUTTON ---------- */
+    .image-modal {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 0, 0, 0.85);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.25s ease;
+      z-index: 200;
+    }
+
+    .image-modal.open {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .image-modal-content {
+      position: relative;
+      max-width: 95vw;
+      max-height: 90vh;
+      transform: scale(0.96);
+      transition: transform 0.25s ease;
+    }
+
+    .image-modal.open .image-modal-content {
+      transform: scale(1);
+    }
+
+    .image-modal-img {
+      max-width: 100%;
+      max-height: 90vh;
+      object-fit: contain;
+      border-radius: 0.75rem;
+      background: #000;
+    }
+
+    .image-modal-close {
+      position: absolute;
+      top: -14px;
+      right: -14px;
+      width: 34px;
+      height: 34px;
+      border-radius: 50%;
+      border: none;
+      background: #ffffff;
+      color: #000;
+      font-size: 1.2rem;
+      font-weight: 700;
+      cursor: pointer;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.15s ease, transform 0.1s ease;
+    }
+
+    .image-modal-close:hover {
+      background: #ddd;
+      transform: translateY(1px);
+    }
+
+
     /* Lightbox */
     .image-lightbox {
       position: fixed; inset: 0;
@@ -441,7 +506,14 @@
     </footer>
   </div>
 
-
+    <!-- LIGHTBOX MODAL -->
+  <div class="image-modal" id="imageModal" aria-hidden="true">
+    <div class="image-modal-content">
+      <img src="" alt="Enlarged board image" class="image-modal-img" id="imageModalImg">
+      <button class="image-modal-close" type="button" aria-label="Close image">&times;</button>
+    </div>
+  </div>
+  
   <!-- Scripts -->
   <script>
     // Auto year
@@ -449,26 +521,38 @@
   </script>
 
   <script>
-    // Lightbox for board image
+    // Lightbox for board image with close button + ESC
     const boardImg = document.querySelector('.zoomable-board');
-    boardImg.addEventListener('click', () => {
-      const lightbox = document.createElement('div');
-      lightbox.classList.add('image-lightbox');
+    const modal = document.getElementById('imageModal');
+    const modalImg = document.getElementById('imageModalImg');
+    const closeBtn = document.querySelector('.image-modal-close');
 
-      const img = document.createElement('img');
-      img.src = boardImg.src;
-      lightbox.appendChild(img);
-      document.body.appendChild(lightbox);
-
-      function closeLightbox(){
-        lightbox.remove();
-        document.removeEventListener('keydown', escHandler);
+    if (boardImg) {
+      function openModal() {
+        modalImg.src = boardImg.src;
+        modal.classList.add('open');
+        modal.setAttribute('aria-hidden', 'false');
       }
-      lightbox.addEventListener('click', closeLightbox);
 
-      function escHandler(e){ if(e.key === "Escape") closeLightbox(); }
-      document.addEventListener('keydown', escHandler);
-    });
+      function closeModal() {
+        modal.classList.remove('open');
+        modal.setAttribute('aria-hidden', 'true');
+        modalImg.src = '';
+      }
+
+      boardImg.addEventListener('click', openModal);
+      closeBtn.addEventListener('click', closeModal);
+
+      modal.addEventListener('click', (e) => {
+        if (e.target === modal) closeModal();
+      });
+
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' && modal.classList.contains('open')) {
+          closeModal();
+        }
+      });
+    }
   </script>
 
   <script>
@@ -491,6 +575,5 @@
       applyTheme(newTheme);
     });
   </script>
-
 </body>
 </html>
